--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
    <head>
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
-      <title>Rafael Sousa - Page</title>
+      <title>Rafael Sousa</title>
       <meta content="" name="description">
       <meta content="" name="keywords">
 
@@ -26,6 +26,8 @@
       <!-- Template Main CSS File -->
       <link href="assets/css/style.css" rel="stylesheet">
 
+      <link rel="shortcut icon" href="assets/img/user.png" type="image/x-icon">
+
    </head>
 
    <body>
@@ -42,7 +44,7 @@
                <!-- <img src="assets/img/profile-img.jpg" alt="" class="img-fluid -->
                <img src="assets/img/my.jpeg" alt="" class="img-fluid
                   rounded-circle">
-               <h1 class="text-light"><a href="index.html">Rafael Sousa</a></h1>
+               <h1 class="text-light"><a href="" class="back-to-top2">Rafael Sousa</a></h1>
                <div class="social-links mt-3 text-center">
                   <a target="_blanck"
                      href="https://api.whatsapp.com/send?phone=5561994346828"
@@ -477,100 +479,6 @@
             </div>
          </section><!-- End Services Section -->
 
-         <!-- ======= Testimonials Section ======= -->
-         <!-- <section id="testimonials" class="testimonials section-bg">
-            <div class="container">
-
-               <div class="section-title">
-                  <h2>Testemunhas</h2>
-                  <p>Aqui encontrará depoimentos de clientes.</p>
-               </div>
-
-               <div class="owl-carousel testimonials-carousel">
-
-                  <div class="testimonial-item" data-aos="fade-up">
-                     <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Proin iaculis purus consequat sem cure digni ssim donec
-                        porttitora entum suscipit rhoncus. Accusantium quam,
-                        ultricies eget id, aliquam eget nibh et. Maecen aliquam,
-                        risus at semper.
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                     </p>
-                     <img src="assets/img/testimonials/testimonials-1.jpg"
-                        class="testimonial-img" alt="">
-                     <h3>Saul Goodman</h3>
-                     <h4>Ceo &amp; Founder</h4>
-                  </div>
-
-                  <div class="testimonial-item" data-aos="fade-up"
-                     data-aos-delay="100">
-                     <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Export tempor illum tamen malis malis eram quae irure
-                        esse labore quem cillum quid cillum eram malis quorum
-                        velit fore eram velit sunt aliqua noster fugiat irure
-                        amet legam anim culpa.
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                     </p>
-                     <img src="assets/img/testimonials/testimonials-2.jpg"
-                        class="testimonial-img" alt="">
-                     <h3>Sara Wilsson</h3>
-                     <h4>Designer</h4>
-                  </div>
-
-                  <div class="testimonial-item" data-aos="fade-up"
-                     data-aos-delay="200">
-                     <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Enim nisi quem export duis labore cillum quae magna enim
-                        sint quorum nulla quem veniam duis minim tempor labore
-                        quem eram duis noster aute amet eram fore quis sint
-                        minim.
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                     </p>
-                     <img src="assets/img/testimonials/testimonials-3.jpg"
-                        class="testimonial-img" alt="">
-                     <h3>Jena Karlis</h3>
-                     <h4>Store Owner</h4>
-                  </div>
-
-                  <div class="testimonial-item" data-aos="fade-up"
-                     data-aos-delay="300">
-                     <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Fugiat enim eram quae cillum dolore dolor amet nulla
-                        culpa multos export minim fugiat minim velit minim dolor
-                        enim duis veniam ipsum anim magna sunt elit fore quem
-                        dolore labore illum veniam.
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                     </p>
-                     <img src="assets/img/testimonials/testimonials-4.jpg"
-                        class="testimonial-img" alt="">
-                     <h3>Matt Brandon</h3>
-                     <h4>Freelancer</h4>
-                  </div>
-
-                  <div class="testimonial-item" data-aos="fade-up"
-                     data-aos-delay="400">
-                     <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Quis quorum aliqua sint quem legam fore sunt eram irure
-                        aliqua veniam tempor noster veniam enim culpa labore
-                        duis sunt culpa nulla illum cillum fugiat legam esse
-                        veniam culpa fore nisi cillum quid.
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                     </p>
-                     <img src="assets/img/testimonials/testimonials-5.jpg"
-                        class="testimonial-img" alt="">
-                     <h3>John Larson</h3>
-                     <h4>Entrepreneur</h4>
-                  </div>
-
-               </div>
-
-            </div>
-         </section>End Testimonials Section -->
          <!-- ======= Contact Section ======= -->
          <section id="contact" class="contact">
             <div class="container">
